# rai-guard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
examples/: evidence_report.py  fastapi_app.py  ollama_example.py  openai_basic.py
examples/static/: index.html
raiguard/: __init__.py  cli.py  conversation.py  guard.py  instrument.py  middleware.py  proxy.py
raiguard/checks/: __init__.py  base.py  content_validators.py  format_validators.py  granite_guardian.py  hallucination.py  hap.py  injection_ml.py  insecure_output.py  llm_intent.py  local_intent.py  pii.py  prompt_injection.py  semantic_similarity.py  toxicity.py
raiguard/compliance/: __init__.py  eu_ai_act.py  nist_ai_rmf.py  owasp_llm.py
raiguard/dashboard/: app.py
raiguard/dashboard/templates/: index.html
raiguard/evidence/: __init__.py  report.py  store.py
raiguard/hub/: __init__.py
scripts/: demo_script.py  record_demo.sh
tests/: test_full_t001_t100.py  test_full_t101_t200.py  test_full_t201_t300.py  test_full_t301_t400.py  test_full_t401_t550.py  test_full_t551_t650.py  test_full_t651_t1000.py  test_guard.py  test_insecure_output.py  test_pii.py  test_prompt_injection.py  test_qa_comprehensive.py  test_scenarios_100.py
