[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rai-guard"
version = "0.1.0"
description = "Runtime Responsible AI compliance evidence layer — OWASP LLM Top 10, EU AI Act, NIST AI RMF"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["responsible-ai", "llm-security", "eu-ai-act", "owasp", "compliance", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# server and evidence deps are already in the core install;
# these extras exist so README install snippets work without error.
server = []
evidence = []
ml = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "detoxify>=0.5.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
full = [
    "raiguard[ml]",
]

[project.scripts]
raiguard = "raiguard.cli:main"

[project.urls]
Homepage = "https://github.com/ashish993/rai-guard"
Documentation = "https://github.com/ashish993/rai-guard#readme"
Issues = "https://github.com/ashish993/rai-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["raiguard"]
